refactor: migrate deprecated APIs and fix unchecked warnings